style.css
/* ... */
/* Alignment */
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}
.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}

/* Text meant only for screen readers */
.assistive-text {
	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}

/* =Header
----------------------------------------------- */

.site-title a {
	font-weight: 700;
	letter-spacing: -1px;
}
.site-description {
	font-weight: 400;
	margin-bottom: 0;
}

/* =Menu
----------------------------------------------- */

.main-navigation {
	background-color: #efefef;
	border: 1px solid #ddd;
	font-weight: 700;
	position: relative;
	z-index: 1;
}
.main-navigation ul {
	list-style: none;
	margin: 0;
	padding-left: 0;
}
.main-navigation li {
	float: left;
	position: relative;
}
.main-navigation a {
	display: block;
	font-size: 14px;
	font-size: 1.4rem;
	font-weight: 700;
	line-height: 1;
	padding: .5em .7em;
	text-decoration: none;
	text-shadow: 0 1px 0 rgba( 255, 255, 255, 0.8 );
	text-transform: uppercase;
	white-space: nowrap;
}
.main-navigation li:hover a,
.main-navigation a:hover,
.main-navigation a:focus,
.main-navigation a:active,
.main-navigation ul ul,
.main-navigation ul ul a,
.main-navigation li.current_page_item a,
.main-navigation li.current-menu-item a,
.main-navigation li.current-page-ancestor a {
	background-color: red;
	color: #fff;
	text-shadow: 0 1px 0 rgba( 0, 0, 0, 0.8 );
}
.main-navigation ul ul {
	border: solid #ff4d4d;
	border-width: 1px 0 0 0;
	box-shadow: 0 8px 8px -5px rgba(0, 0, 0, .4);
	display: none;
	float: left;
	position: absolute;
		top: 1.8em;
		left: 0;
	z-index: 99999;
}
.main-navigation ul ul ul {
	border-width: 0 0 0 1px;
	left: 100%;
	top: 0;
}.main-navigation ul li:hover > ul {
	display: block;
}
.menu-item-parent > a:after {
    color: #bbb;
    content: '\a0 \a0 \a0 \25bc';
    font-size: 8px;
    vertical-align: 1px;
}
.sub-menu .menu-item-parent > a:after {
    content: '\a0 \a0 \a0 \a0 \25b6';
}
.menu-item-parent:hover > a:after,
.sub-menu .menu-item-parent > a:after {
	color: #ff4d4d;
}


/* =Content
----------------------------------------------- */

.sticky {
	border-left: 4px solid red;
	padding: 0 0 0 1.5em;
}
.entry-title {
	font-size: 24px;
	font-size: 2.4rem;
	margin-bottom: .3em;
}
.single .entry-title,
.page .entry-title,
.not-found .entry-title {
	font-size: 28px;
	font-size: 2.8rem;
}
.page-title {
	color: #aaa;
	font-family: inherit;
	font-size: 12px;
	font-size: 1.2rem;
	font-weight: inherit;
	line-height: 1.2;
	margin-bottom: 1.3em;
	text-transform: uppercase;
}
.entry-meta {
	clear: both;
	color: #aaa;
	font-size: 12px;
	font-size: 1.2rem;
	line-height: 1.2;
	text-transform: uppercase;
}
.byline {
	display: none;
}
.group-blog .byline {
	display: inline;
}
.entry-content,
.entry-summary {
	margin: 1.5em 0 0;
}
.page-links {
	clear: both;
	margin: 0 0 1.5em;
}


/* =Asides
----------------------------------------------- */

.blog .format-aside .entry-title,
.archive .format-aside .entry-title {
	display: none;
}


/* =Media
----------------------------------------------- */

.site-header img,
.entry-content img,
.comment-content img,
.widget img {
	max-width: 100%; /* Fluid images for posts, comments, and widgets */
}
.site-header img,
.entry-content img,
img[class*="align"],
img[class*="wp-image-"] {
	height: auto; /* Make sure images with WordPress-added height and width attributes are scaled correctly */
}
.site-header img,
.entry-content img,
img.size-full {
	max-width: 100%;
}
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}
.wp-caption {
	max-width: 100%;
}
.wp-caption.alignleft,
.wp-caption.alignright {
	margin-bottom: .5em;
}
.wp-caption {
	margin-bottom: 1.5em;
	max-width: 100%;
}
.wp-caption img {
	border-width: 0 0 1px 0;
	box-shadow: none;
	display: block;
	margin: 0;
	max-width: 100%;
}
.wp-caption-text {
	color: #aaa;
	font-size: 14px;
	font-size: 1.4rem;
	font-style: italic;
	line-height: 1.2;
	text-align: center;
}
.wp-caption .wp-caption-text {
	margin: 1em;
}
#content .gallery {
	margin-bottom: 1.5em;
}
.gallery-caption {
}
#content .gallery a img {
	border: none;
	height: auto;
	max-width: 90%;
}
#content .gallery dd {
	margin: 0;
}

/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}


/* =Navigation
----------------------------------------------- */

#content .site-navigation {
	margin: 0 0 1.5em;
	overflow: hidden;
}
#content .nav-previous {
	float: left;
	width: 50%;
}
#content .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}

/* =Comments
----------------------------------------------- */

.bypostauthor {
}

/* =Widgets
----------------------------------------------- */

#secondary,
#tertiary {
	font-size: 14px;
	font-size: 1.4rem;
	padding-left: 20px;
	width: 280px;
}
.widget {
	margin: 0 0 1.5em;
}

/* Search widget */
#searchsubmit {
	display: none;
}

